# sts

./: .clang_complete  .cproject  .gitignore  .gitmodules  .project  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  Makefile  README.md  analyze.py  mainpage.dox  wercker.yml
data/: empty.fasta  thirty.ma  thirty.tree
data/10taxon/: 10taxon.fasta  10taxon.mb  10taxon.nex  10taxon.tre  Makefile  bppml.bpp  bppseqgen.bpp  mb_10taxon.con.tre  mb_10taxon.lstat  mb_10taxon.mcmc  mb_10taxon.nat_ext.csv  mb_10taxon.p  mb_10taxon.parts  mb_10taxon.pstat  mb_10taxon.t  mb_10taxon.trprobs  mb_10taxon.tstat  mb_10taxon.vstat  plot_natural_extension.R
data/4taxon/: 4taxon.ML.dnd  4taxon.fasta  4taxon.infos  4taxon.mb  4taxon.nex  4taxon.params.txt  4taxon.tre  Makefile  bppml.bpp  bppseqgen.bpp  mb_4taxon.cherries.csv  mb_4taxon.ckp  mb_4taxon.ckp~  mb_4taxon.con.tre  mb_4taxon.lstat  mb_4taxon.mcmc  mb_4taxon.nat_ext.csv  mb_4taxon.p  mb_4taxon.parts  mb_4taxon.pstat  mb_4taxon.t  mb_4taxon.trprobs  mb_4taxon.tstat  mb_4taxon.vstat  plot_cherries.R  plot_natural_extension.R  run.sh
data/5taxon/: 5taxon.fasta  5taxon.tre  bppseqgen.bpp
data/bppsim/: run_sim.sh
data/bppsim/JC69/: JC69.ML.dnd  JC69.dnd  JC69.fasta  JC69.infos  JC69.params.txt  JC69.phyx  bppml.bpp  bppseqgen.bpp
data/bppsim/cherry/: check.bpp  run_sts.sh  seq.fasta  sts.sort.uniq.out  sts.tre
data/bppsim/mixture_JC69/: README  check_sts_tree_on_combo.bpp  combined.fasta  run_sim.sh  sim_tree1.bpp  sim_tree1.fasta  sim_tree2.bpp  sim_tree2.fasta  tree1.tre  tree2.tre
data/bppsim/mixture_sim/: run_sts.sh  sts.out  sts.sort.uniq.out  sts_on_combo.tre
data/bppsim/test/: bppml.bpp  test.ML.dnd  test.dnd  test.infos  test.params.txt  test.phyx  test.phyx_phyml_stats.txt  test.phyx_phyml_tree.txt
data/bppsim/tiny/: JC69.ML.dnd  JC69.dnd  JC69.fasta  JC69.infos  JC69.params.txt  bppml.bpp  bppseqgen.bpp
examples/10taxon-01/: 10taxon-01.fasta
examples/10taxon-01/t1/: 10tax_trim_t1.mb  10tax_trim_t1.nex  10tax_trim_t1.t
examples/10taxon-01/t1-t2-t3-t4-t5/: 10tax_trim_t1-t2-t3-t4-t5.mb  10tax_trim_t1-t2-t3-t4-t5.nex  10tax_trim_t1-t2-t3-t4-t5.t
examples/50taxon-01/: 50taxon-01.fasta
examples/50taxon-01/t1/: 50tax_trim_t1.mb  50tax_trim_t1.nex  50tax_trim_t1.t
examples/50taxon-01/t1-t2-t3-t4-t5/: 50tax_trim_t1-t2-t3-t4-t5.mb  50tax_trim_t1-t2-t3-t4-t5.nex  50tax_trim_t1-t2-t3-t4-t5.t
include/sts/: gsl.hpp  lcfit.h  likelihood.hpp  log.hpp  moves.hpp  particle.hpp  util.hpp
include/sts/likelihood/: bpp_shim.hpp  forest_likelihood.hpp  online_calculator.hpp  online_calculator_fwd.hpp
include/sts/likelihood/detail/: online_calculator.hpp  online_calculator_fwd.hpp
include/sts/log/: json_logger.hpp  sampler.hpp
include/sts/moves/: base_branch_length_proposer.hpp  branch_length_proposer.hpp  delta_branch_length_proposer.hpp  eb_bl_proposer.hpp  exponential_branch_length_proposal.hpp  exponential_branch_length_proposer.hpp  gamma_branch_length_proposer.hpp  mcmc_move.hpp  ml_bl_proposer.hpp  rooted_merge.hpp  smc_init.hpp  smc_move.hpp  uniform_bl_mcmc_move.hpp  uniform_branch_length_proposer.hpp
include/sts/particle/: edge.hpp  edge_fwd.hpp  node.hpp  phylo_node.hpp  phylo_node_fwd.hpp  phylo_particle.hpp  state.hpp  util.hpp
include/tclap/: ArgException.h
lib/boost_1_54_0/: README.md
lib/boost_1_55_0/: README.md
lib/cmake/: FindBpp.cmake  FindGsl.cmake  GetGitRevisionDescription.cmake
lib/jsoncpp/: CMakeLists.txt  Makefile
python/: analyze.py  generate_graph.py  sts.py  test_analyze.py  test_sts.py
python/test-data/: 1.json  2.json
src/: CMakeLists.txt  Makefile  base_branch_length_proposer.cc  base_branch_length_proposer.h  beagle_tree_likelihood.cc  beagle_tree_likelihood.h  bl_proposal_fn.h  bpp_shim.cc  bpp_shim.h  bpp_shim.hh  branch_length_proposer.h  child_swap_mcmc_move.cc  child_swap_mcmc_move.h  config.h.in  constant_rate.h  delta_branch_length_proposer.cc  delta_branch_length_proposer.h  discrete_gamma_rates.cc  discrete_gamma_rates.h  eb_bl_proposer.h  edge.cc  edge.h  exponential_branch_length_proposer.cc  exponential_branch_length_proposer.h  forest_likelihood.cc  forest_likelihood.h  gamma_branch_length_proposer.cc  gamma_branch_length_proposer.h  gm_tree.cc  gm_tree.h  gm_tree_pair_proposer.cc  gm_tree_pair_proposer.h  gsl.cc  gsl.h  guided_pair_proposer.cc  guided_pair_proposer.h  hmsbeagle.cc  hmsbeagle.h  hmsbeagle.hh  lcfit.h  (+46 more)
src/log/: json_logger.cc  json_logger.h  sampler.cc  sampler.h
src/online/: .gitignore  AbstractFlexibleTreeLikelihood.cc  AbstractFlexibleTreeLikelihood.cpp  AbstractFlexibleTreeLikelihood.hpp  BeagleFlexibleTreeLikelihood.cc  BeagleFlexibleTreeLikelihood.cpp  BeagleFlexibleTreeLikelihood.hpp  FlexibleTreeLikelihood.hpp  SimpleFlexibleTreeLikelihood.cc  SimpleFlexibleTreeLikelihood.cpp  SimpleFlexibleTreeLikelihood.hpp  abstract_flexible_treelikelihood.cc  abstract_flexible_treelikelihood.h  adaptive_mcmc_move.cc  adaptive_mcmc_move.h  attachment_likelihood.cc  attachment_likelihood.h  attachment_location.h  beagle_flexible_tree_likelihood.cc  beagle_flexible_tree_likelihood.h  beagle_tree_likelihood.cc  beagle_tree_likelihood.h  bpp_shim.cc  branch_length_prior.cc  branch_length_prior.h  composite_tree_likelihood.cc  composite_tree_likelihood.h  delta_exchange_mcmc_move.cc  delta_exchange_mcmc_move.h  dirichlet_prior.cc  dirichlet_prior.h  exchange_mcmc_move.cc  exchange_mcmc_move.h  flexible_parsimony.cc  flexible_parsimony.h  flexible_tree_likelihood.h  gsl.cc  gsl.h  guided_online_add_sequence_move.cc  guided_online_add_sequence_move.h  (+64 more)
src/phylosmc/: phylosmc.pde
src/tests/: test_sts_beagle_tree_likelihood.cpp  test_sts_beagle_tree_likelihood.hpp  test_sts_gmerge.hpp  test_sts_gsl.cpp  test_sts_gsl.hpp  test_sts_likelihood.cpp  test_sts_likelihood.hpp  test_sts_online_likelihood_vector.hpp  test_sts_parsing.hpp
test/: CMakeLists.txt  test_parsimony.cpp  test_sts_beagle_tree_likelihood.cpp  test_sts_flexible_tree_likelihood.cpp  test_sts_gsl.cpp  test_sts_likelihood.cpp  test_sts_log_tricks.cpp  test_sts_parsing.cpp
(+6 files in other folders)
